[package]
name = "iaqualink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio =  { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
serde_repr = "0.1.7"
anyhow = "1.0.42"
rumqttc = { version = "0.23", features = ["websocket"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock", "serde"] }
aws-credential-types = "1"
aws-types = "1"
aws-sigv4 = { version = "1", features = ["sign-http", "http1"] }
http = "1"
log = { version = "0.4.20", default-features = false }

[patch.crates-io]
# Remove once https://github.com/bytebeamio/rumqtt/pull/790 is in a new release.
rumqttc = { git = "https://github.com/bytebeamio/rumqtt" }
